--- a/backend/readme
+++ b/backend/readme
@@ -1,3 +1,5 @@
+we are going to create the Employee
+
 Created the json file by using the command 
 ***npm init -y***
 
@@ -16,4 +18,9 @@ dependencies
 //     "express":"^4.17.1",
 //     "mongoose":"^6.0.14"
 // }
+
+import 'bootstrap/dist/css/bootstrap.min.css';
+
+//node .\server.js
+// nodemon .\server.js
 
